# myAI

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_models.py  check_models_fixed.py  docker-compose.yml  models_list.txt  models_list_final.txt  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
netlify/functions/: chat.js  welcome.js
static/: index.html  script.js  style.css
static/js/: app.js
static/js/modules/: chat.js  sidebar.js  state-selector.js  tts.js  utils.js  voice.js  welcome.js
static/js/states/: andaman-nicobar.js  andhra-pradesh.js  arunachal-pradesh.js  assam.js  bihar.js  chandigarh.js  chhattisgarh.js  dadra-nagar-haveli.js  daman-diu.js  delhi.js  goa.js  gujarat.js  haryana.js  himachal-pradesh.js  index.js  jammu-kashmir.js  jharkhand.js  karnataka.js  kerala.js  ladakh.js  lakshadweep.js  madhya-pradesh.js  maharashtra.js  manipur.js  meghalaya.js  mizoram.js  nagaland.js  odisha.js  puducherry.js  punjab.js  rajasthan.js  sikkim.js  tamil-nadu.js  telangana.js  tripura.js  uttar-pradesh.js  uttarakhand.js  west-bengal.js
